# BTGenBot

./: .gitignore  LICENSE  README.md
bt_client/: CMakeLists.txt  README.md  package.xml
bt_client/bt_xml/: demo_task.xml  task1.xml  task2.xml  task3a.xml  task3b.xml  task5.xml  task6.xml  temp.xml
bt_client/config/: locations.yaml  tree.yaml
bt_client/include/: FollowAruco.hpp  GenerateNextDestination.hpp  MoveManipulator.hpp  MoveTo.hpp  MoveToWithTimeout.hpp  isExplorationComplete.hpp  isGoalReachable.hpp
bt_client/launch/: bt.launch.py  monitor.launch.py
bt_client/src/: FollowAruco.cpp  GenerateNextDestination.cpp  MoveManipulator.cpp  MoveTo.cpp  MoveToWithTimeout.cpp  bt_monitor.cpp  isExplorationComplete.cpp  isGoalReachable.cpp  main.cpp
bt_generator/: btgenbot.py  inference.ipynb  requirements.txt
bt_generator/config/: example_retrieving.yaml  params.yaml
bt_validator/: CMakeLists.txt  README.md  package.xml
bt_validator/include/bt_test/: arm_exploration.hpp  aruco_demo.hpp  assembly.hpp  exploration.hpp  move_to.hpp  move_to_async.hpp  move_to_threshold.hpp  pick_and_place.hpp  press_button.hpp
bt_validator/src/: main.cpp
bt_validator/xml/: demo.xml  tree1.xml  tree10.xml  tree2.xml  tree3.xml  tree4.xml  tree5.xml  tree6.xml  tree7.xml  tree8.xml  tree9.xml
dataset/: bt_dataset.json
lora_adapters/codellama-bt-adapter/: README.md  adapter_config.json  info.txt
lora_adapters/llamachat-bt-adapter/: README.md  adapter_config.json  info.txt
